Changes to UI committed

--- a/UI/admin_login.html
+++ b/UI/admin_login.html
@@ -12,13 +12,15 @@
 </head>
 <body>
         <div class="topnav">
-                <a class="active" href="#home">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="sign_up.html">Sign Up</a>
                 <a href="log_in.html">Log In</a>
                 <a href = "admin_login.html">Admin</a>
                 <a href="about.html">About Politico</a>
               </div>
+    <div id = "header">
     <marquee direction = "left", width = "50%", height = "20%"><h1>Admin</h1></marquee>
+    </div>
     <br/>
    <p><img src = "images/admin.jpg"; alt = "admin_avatar" style = "length:200px; width:200px"></p>
     <form action = action_page.py method = "post" target = "_blank">
@@ -40,5 +42,8 @@
             </p>
         
           </footer>
+          <div id="footer">
+            Copyright © okothpeter99@gmail.com
+            </div
 </body>
 </html>
