--- a/UI/about.html
+++ b/UI/about.html
@@ -38,6 +38,9 @@
             everything is good in our hands. All the results are as well open to public scruitiny and for that, you can view and verify them 
             as they come in
         </p>
+        <div id="footer">
+            Copyright © okothpeter99@gmail.com
+            </div
 
     </body>
 </html>
