--- a/UI/index.html
+++ b/UI/index.html
@@ -19,10 +19,20 @@
     <a href="about.html">About Politico</a>
   </div>
   
-
+<div id = "header">
   <h1>The Worlds' No 1 Voting Plartform</h1>
+</div>
   <br/><br/>
   <br/><br/><br/><br/><br/><br/>
+</div>
+<div id="nav">
+  <a href = "vote_president.html">Vote for President<br/></a>
+  <a href = "vote_senator.html" >Vote for Senator</a><br/>
+  <a href ="vote_governor.html">Vote Governor</a><br/>
+  <a href = "vote_mp.html">Vote for MP</a><br/>
+  <a  href = "vote_mca.html">Vote for MCA</a><br/>
+
+  </div>
   <footer>
     <p>
     <a href = "https://facebook.com"><img border = 0; src = "images/facebook.png", alt = "Facebook Avtar" style = "height:85px; width:85px"></a>
@@ -33,6 +43,8 @@
     </p>
 
   </footer>
-
+  <div id="footer">
+    Copyright © okothpeter99@gmail.com
+    </div>
   </body>
 </html>
