--- a/UI/log_in.html
+++ b/UI/log_in.html
@@ -17,7 +17,9 @@
                     <a href = "admin_login.html">Admin</a>
                     <a href="about.html">About Politico</a>
                   </div>
+       <div id = "header">
         <h2>Hello, are you are a returning user? login below</h2>
+        </div>
        <p><img src = "images/vote.jpg" alt = "Login page avatar" style = "width: 200px; height: 200px"></p>
         <form action = action_page.py method = "post" target = "_blank">
             ID/Passport No:<br/>
