The commit to modify voting pages

--- a/UI/log_in.html
+++ b/UI/log_in.html
@@ -41,5 +41,9 @@
                 </p>
             
               </footer>
+            </footer>
+            <div id="footer">
+              Copyright © okothpeter99@gmail.com
+              </div>
     </body>
 </html>
