--- a/UI/sign_up.html
+++ b/UI/sign_up.html
@@ -77,5 +77,9 @@
                     </p>
                 
                   </footer>
+                </footer>
+                <div id="footer">
+                  Copyright © okothpeter99@gmail.com
+                  </div>
     </body>
 </html>
