--- a/UI/admin_login.html
+++ b/UI/admin_login.html
@@ -5,6 +5,7 @@
     <link rel = "stylesheet" href = "politico.css">
     <script src = "politico.js"></script>
     <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "description" content = "Politico:New voting system admin login">
     <meta name = "keywords" content = "Politico, Voting, Election, Vote">
     <meta name = "Author" content = "Peter Okoth">
