--- a/UI/vote_president.html
+++ b/UI/vote_president.html
@@ -12,6 +12,45 @@
        <meta name = "Author" content = "Peter Okoth">
     </head>
     <body>
+            <div class="topnav">
+                    <a class="active" href="index.html">Home</a>
+                    <a href="sign_up.html">Sign Up</a>
+                    <a href="log_in.html">Log In</a>
+                    <a href = "admin_login.html">Admin</a>
+                    <a href="about.html">About Politico</a>
+                  </div>
+        <h2>Vote for the President</h2>
+        <table style = "width: 80%; height: 100% float:"right"">
+            <tr>
+                <th>Presidential Aspirant</th>
+                <th>Political Party</th>
+                <th>Your Vote</th>
+            </tr>
+            <tr>
+                <td>Raila Odinga
+                    <p><img src = "images/raila.jpg"</p>
+                </td>
+                <td>ODM</td>
+                <td></td>
+            </tr>
+            <tr>
+            <td>Uhuru Kenyatta
+                <p><img src = "images/uhuru.jpg"</p>
+            </td>
+            <td>TNA</td>
+            <td></td>
+            </tr>
+            <tr>
+                    <td>Ekurokot
+                        <p><img src = "images/okot.jpg"</p>
+                    </td>
+                    <td>Maendele ChapChap</td>
+                    <td></td>
+                    </tr>
+
+        </table>
+
+
         <footer>
             <p>
             <a href = "https://facebook.com"><img border = 0; src = "images/facebook.png", alt = "Facebook Avtar" style = "height:85px; width:85px"></a>
@@ -22,5 +61,9 @@
             </p>
         
           </footer>
+        </footer>
+        <div id="footer">
+          Copyright © okothpeter99@gmail.com
+          </div>
     </body>
 </html>
